--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 
 <!-- project -->
-<section id="project" class="portfolio_wrapper">
+<!-- <section id="project" class="portfolio_wrapper">
   <div class="container">
       <div class="row">
           <div class="my-3 mb-lg-0">
@@ -206,7 +206,7 @@
           </div>
       </div>
   </div>
-</section>
+</section> -->
 
 <!-- project exit --> 
 <!-- contact  -->
