--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon" href="letter-n (2).png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://www.youtube.com/redirect?event=video_description&redir_token=QUFFLUhqa2M0eGJic0tNaWdpU0g0RzVTcDZ3ZW5CV2hrd3xBQ3Jtc0tubEpYelBULW45dTUtSnp3ZjBEbXNOR0MwUWlJVXFOY08xUE9Fd2x6bEl0TGtBYlJsLWpuSFNvUGdiWFl6UDA2cjNSbFd5SE5sQkRFeU1fODUtOFBtelRHTEVzUENINHFwSk9BS2l4dHYwU2JTeVE2WQ&q=https%3A%2F%2Ffonts.googleapis.com%2Fcss2%3Ffamily%3DPoppins%3Awght%40100%3B200%3B300%3B400%3B500%3B600%3B700%3B800%3B900%26display%3Dswap&v=k8PvI1Vrx8w">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive-style.css">
