--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="row">
       <div class="col-sm-8 text-center text-md-start">
         <h6>"Hello World!"</h6>
-        <h1>I'm Ritika Jaiswal<br><span>UI Full Stack Developer.</span></br>based in India.</h1>
+        <h1>I'm Ritika Jaiswal<br><span>UI With MERN Stack Developer.</span></br>based in India.</h1>
         <div class="mt-4">
           <a class="main-btn" href="file:///C:/Users/Ritika%20gangaprasad/Downloads/Ritika's%20Resume.pdf">Download CV</a>
         </div>    
