--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h6>"Hello World!"</h6>
         <h1>I'm Ritika Jaiswal<br><span>UI With MERN Stack Developer.</span></br>based in India.</h1>
         <div class="mt-4">
-          <a class="main-btn" href="file:///C:/Users/Ritika%20gangaprasad/Downloads/Ritika's%20Resume.pdf">Download CV</a>
+          <a class="main-btn" href="file:///C:/Users/Ritika%20gangaprasad/AppData/Local/Microsoft/Windows/INetCache/IE/9X6JXWUB/Ritika_Jaiswal_pdf[1].pdf">Download CV</a>
         </div>    
       </div>
       <div class="col-sm-4 text-center text-md-end">
