--- a/index.html
+++ b/index.html
@@ -142,7 +142,58 @@
 
 <!-- education exit -->
 
+<section id="skills" class="skills_wrapper py-5">
+  <div class="container">
+    <div class="my-3 mb-lg-0 text-center">
+      <span class="subtitle">What I Know</span>
+      <h1>My Skills</h1>
+    </div>
 
+    <div class="row justify-content-center mt-4">
+      <!-- Skill Item -->
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <i class="fa-brands fa-js fa-2x mb-2 text-warning"></i>
+        <h5 style="color: pink;">JavaScript</h5>
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <i class="fa-brands fa-html5 fa-2x mb-2 text-danger"></i>
+        <h5 style="color: pink;">HTML</h5>
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <i class="fa-brands fa-css3-alt fa-2x mb-2 text-primary"></i>
+        <h5 style="color: pink;">CSS</h5>
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <i class="fa-brands fa-bootstrap fa-2x mb-2 text-success"></i>
+        <h5 style="color: pink;">Bootstrap</h5>
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <i class="fa-brands fa-react fa-2x mb-2 text-info"></i>
+        <h5 style="color: pink;">React.js</h5>
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <i class="fa-brands fa-node-js fa-2x mb-2 text-success"></i>
+        <h5 style="color: pink;">Node.js</h5>
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <i class="fa-solid fa-database fa-2x mb-2 text-danger"></i>
+        <h5 style="color: pink;">MongoDB</h5>
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <i class="fa-solid fa-database fa-2x mb-2 text-primary"></i>
+        <h5 style="color: pink;">MySQL</h5>
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <i class="fa-solid fa-fire fa-2x mb-2 text-info"></i>
+        <h5 style="color: pink;">Tailwind CSS</h5>
+      </div>
+      <div class="col-6 col-md-3 mb-4 text-center">
+        <i class="fa-solid fa-server fa-2x mb-2 text-warning"></i>
+        <h5 style="color: pink;">Express.js</h5>
+      </div>
+    </div>
+  </div>
+</section>
 <!-- project -->
 <section id="project" class="portfolio_wrapper">
   <div class="container">
