--- a/index.html
+++ b/index.html
@@ -96,7 +96,11 @@
           <div class="about-box">
             <div class="designer-box">
               <p>
-                "Hey friends! 🌟 I'm Ritika from Maharashtra, India. Pursuing MSC in Computer Science and now on a wild ride with UI! 🚀 My portfolio? When I'm not doing coding stuff, I enjoy making my portfolio look really cool. I like adding fun and creative things when I'm bored. It's like giving my webpage a fancy makeover! 🚀🌈 Join me for some laughs and lots of UI magic! ☕💻✨ Let's code and giggle together! 🎉"
+Hey friends! 🌟 I’m Ritika from Maharashtra, India — a passionate frontend developer exploring the world of UI and MERN stack! 🚀
+I’m currently on the lookout for exciting opportunities in Frontend and MERN stack development where I can grow, learn, and contribute to amazing projects. 👩‍💻💼
+When I’m not coding, I love giving my portfolio a creative twist — it’s like a digital playground where I add fun elements and cool designs just for the joy of it! 🎨✨
+Let’s connect, code and create some UI magic together! 💻☕🌈
+
               </p>
             </div>
           </div>
