--- a/index.html
+++ b/index.html
@@ -121,18 +121,14 @@ Let’s connect, code and create some UI magic together! 💻☕🌈
       <div class="row justify-content-between align-items-center">
       
         <div class="col-lg-5 mb-4 mb-lg-0">
+          <!-- B.Sc Box -->
           <div class="education-box">
-            <h2>MSC in CS</h2>
+            <h2>B.Sc in Computer Science</h2>
             <p>Swami Ramanand Teerth Marathwada University, Nanded</p>
-          </div>
-          <!-- Diploma Box -->
-          <div class="education-box">
-            <h2>BSC in CS</h2>
-            <p>Swami Ramanand Teerth Marathwada University, Nanded</p>
+            <p><strong>CGPA:</strong> 8.5</p>
           </div>
         </div> 
 
-        
         <div class="col-lg-7 ps-lg-5 text-center text-lg-end">
           <div class="image-container">
             <img src="Education.gif" class="img-fluid rounded-3" alt="Education_Photo">
@@ -143,6 +139,7 @@ Let’s connect, code and create some UI magic together! 💻☕🌈
     </div>
   </div>
 </section>
+
 
 <!-- education exit -->
 
