--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Let’s connect, code and create some UI magic together! 💻☕🌈
         <div class="col-lg-5 mb-4 mb-lg-0">
           <!-- B.Sc Box -->
           <div class="education-box">
-            <h2>B.Sc in Computer Science</h2>
+            <h2>Bachelor of science in Computer Science</h2>
             <p>Swami Ramanand Teerth Marathwada University, Nanded</p>
             <p><strong>CGPA:</strong> 8.5</p>
           </div>
