--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>    
       </div>
       <div class="col-sm-4 text-center text-md-end">
-        <img src="about.png" alt="Your Image Alt Text" class="d-block mx-auto img-fluid">
+        <img src="ChatGPT Image Jun 23, 2025, 05_30_54 PM.png" alt="Your Image Alt Text" class="d-block mx-auto img-fluid">
       </div>
     </div>
   </div>
